# Skyscrapers

./: .gitignore  .gitmodules  AMPBoard.cpp  AMPBoard.h  AMPSequentialSolver.cpp  AMPSequentialSolver.h  AMPSquareMatrix.cpp  AMPSquareMatrix.h  AMPUtilities.cpp  AMPUtilities.h  Board.cpp  Board.h  CMakeLists.txt  Combinatorics.cpp  Combinatorics.h  Constraints.cpp  Constraints.h  CpuSolver.cpp  CpuSolver.h  EfficientIncidenceCube.cpp  EfficientIncidenceCube.h  Pair.cpp  Pair.h  ParalellCpuSolver.cpp  ParalellCpuSolver.h  ParallelCpuSolver.cpp  ParallelCpuSolver.h  ParallelGpuSolver.cpp  ParallelGpuSolver.h  ParallelSolver.cpp  ParallelSolver.h  README.md  SequentialSolver.cpp  SequentialSolver.h  Skyscrappers.sln  Skyscrappers.vcxproj  Skyscrappers.vcxproj.filters  Solver.cpp  Solver.h  SquareMatrix.h  (+9 more)
Skyscrapers/: Board.cpp  Board.h  CMakeLists.txt  Constraints.cpp  EfficientIncidenceCube.cpp  ParallelCpuSolver.cpp  SequentialSolver.cpp  Solver.h  SquareMatrix.h  StackEntry.cpp  StackEntry.h  main.cpp
SkyscrapersCUDA/: BitManipulation.cu  Board.cu  Board.cuh  CMakeLists.txt  CUDAUtilities.cu  CUDAUtilities.cuh  ConsoleUtilities.cpp  ConsoleUtilities.h  KernelFunctions.inl  MemoryUtilities.cu  MemoryUtilities.cuh  SequentialSolver.cu  SequentialSolver.cuh  Solver.cu  Solver.cuh  SquareMatrix.cuh  Stack.cu  Stack.cuh  StackEntry.cuh  Statistics.cpp  Statistics.h  getopt.h  kernel.cu
Skyscrappers/: Board.cpp  Board.h  Combinatorics.h  Constraints.h  ParallelCpuSolver.cpp  ParallelCpuSolver.h  ParallelSolver.cpp  SequentialSolver.cpp  Skyscrappers.vcxproj  SquareMatrix.cpp  main.cpp
SkyscrappersCUDA/: BitManipulation.cu  BitManipulation.cuh  Board.cu  Board.cuh  CUDAUtilities.cu  CUDAUtilities.cuh  Constraints.cuh  KernelFunctions.inl  MemoryUtilities.cu  MemoryUtilities.cuh  Pair.cu  Pair.cuh  ParallelSolver.cu  ParallelSolver.cuh  PointerIterator.cu  PointerIterator.cuh  SequentialSolver.cu  SequentialSolver.cuh  SkyscrappersCUDA.vcxproj  SkyscrappersCUDA.vcxproj.filters  Solver.cu  Solver.cuh  SquareMatrix.cu  SquareMatrix.cuh  Stack.cuh  StackEntry.cu  StackEntry.cuh  Statistics.cpp  Statistics.h  XGetopt.cpp  XGetopt.h  kernel.cu
